--- a/templates/buy.html
+++ b/templates/buy.html
@@ -12,6 +12,6 @@
       <div class="mb-3">
         <input name="shares" placeholder="Shares" type="number" min="1" autocomplete="off" class="form-control mx-auto w-auto">
       </div>
-      <button class="btn btn-primary" type="submit">Buy</button>
+      <button class="btn btn-dark" type="submit">Buy</button>
     </form>
 {% endblock %}
