--- a/templates/quote.html
+++ b/templates/quote.html
@@ -9,6 +9,6 @@
       <div class="mb-3">
         <input name="symbol" placeholder="Stock symbol" type="text" autocomplete="off" autofocus class="form-control mx-auto w-auto">
       </div>
-      <button class="btn btn-primary" type="submit">Quote</button>
+      <button class="btn btn-dark" type="submit">Quote</button>
     </form>
 {% endblock %}
