--- a/templates/sell.html
+++ b/templates/sell.html
@@ -19,7 +19,7 @@ Sell
       <input name="shares" placeholder="Shares" type="number" min="1" autocomplete="off"
         class="form-control mx-auto w-auto">
     </div>
-    <button class="btn btn-primary" type="submit">Sell</button>
+    <button class="btn btn-dark" type="submit">Sell</button>
   </form>
 </div>
 {% endblock %}
