added js password validation

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -8,34 +8,39 @@ Change Password
 
 <form action="/change_password" method="post">
     <div class="mb-3">
-        <input required autocomplete="off" class="form-control mx-auto w-auto" name="current-password" type="password" placeholder="Current Password">
+        <input required autocomplete="off" class="form-control mx-auto w-auto" name="current-password" type="password"
+            placeholder="Current Password">
     </div>
     <div class="mb-3">
-        <input required autocomplete="off" class="form-control mx-auto w-auto" name="confirmation" type="password" placeholder="Confirmation">
+        <input required autocomplete="off" class="form-control mx-auto w-auto" name="confirmation" type="password"
+            placeholder="Confirmation">
     </div>
     <div class="mb-3">
-        <input required autocomplete="off" class="form-control mx-auto w-auto" name="new-password" type="password" placeholder="New Password">
+        <input required autocomplete="off" class="form-control mx-auto w-auto" name="new-password" type="password"
+            placeholder="New Password" oninput="check()">
     </div>
     <div class="mb-3">
         <button class="btn btn-dark" type="submit">Submit</button>
-    </div>
     </div>
 </form>
 <h6 id="must_contain">Passwords must contain:</h6>
 <div id="check">
     <div id="check0">
-        <span><i class="fa-regular fa-circle-check"></i>&#160 between 8-20 characters.</span>
+        <span><i class="fa-regular fa-circle-check"></i>&#160 At least 8 characters.</span>
     </div>
     <div id="check1">
-        <span><i class="fa-regular fa-circle-check"></i>&#160 At least one number.</span>
+        <span><i class="fa-regular fa-circle-check"></i>&#160 Less than 20 characters.</span>
     </div>
     <div id="check2">
-        <span><i class="fa-regular fa-circle-check"></i>&#160 At least one special charecter.</span>
+        <span><i class="fa-regular fa-circle-check"></i>&#160 At least one number.</span>
     </div>
     <div id="check3">
-        <span><i class="fa-regular fa-circle-check"></i>&#160 At least one upper case letter.</span>
+        <span><i class="fa-regular fa-circle-check"></i>&#160 At least one special charecter.</span>
     </div>
     <div id="check4">
+        <span><i class="fa-regular fa-circle-check"></i>&#160 At least one upper case letter.</span>
+    </div>
+    <div id="check5">
         <span><i class="fa-regular fa-circle-check"></i>&#160 At least one lower case letter.</span>
     </div>
 </div>
