--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,8 @@ Register
 
 {% block main %}
 
+<script src="../static/script.js"></script>
+
 <form action="/register" method="post" id="form">
     <div class="mb-3">
         <input required autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username"
