--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -6,6 +6,8 @@ Change Password
 
 {% block main %}
 
+<script src="../static/script.js"></script>
+
 <form action="/change_password" method="post">
     <div class="mb-3">
         <input required autocomplete="off" class="form-control mx-auto w-auto" name="current-password" type="password"
