--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -19,7 +19,7 @@ Change Password
     </div>
     <div class="mb-3">
         <input required autocomplete="off" class="form-control mx-auto w-auto" name="new-password" type="password"
-            placeholder="New Password" oninput="check()">
+            placeholder="New Password" id="password" oninput="check()">
     </div>
     <div class="mb-3">
         <button class="btn btn-dark" type="submit">Submit</button>
